// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`used with a combo box columns as names only renders a table as the list box 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-describedby="id_found_description"
      aria-expanded="false"
      aria-labelledby="id-label"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      aria-hidden="true"
      class="react-combo-boxes-combobox__open-button"
      id="id_open_button"
    />
    <span
      aria-hidden="true"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
    />
    <div
      class="react-combo-boxes-listbox"
      hidden=""
    >
      <table
        aria-labelledby="id-label"
        class="react-combo-boxes-listbox__table"
        id="id_listbox"
        role="listbox"
        tabindex="-1"
      >
        <colgroup>
          <col />
          <col />
        </colgroup>
        <tbody
          role="presentation"
        >
          <tr
            class="react-combo-boxes-listbox__table-row"
            id="id_option_apple"
            role="option"
            tabindex="-1"
          >
            <td
              class="react-combo-boxes-listbox__table-cell"
              role="presentation"
            >
              Apple
            </td>
            <td
              class="react-combo-boxes-listbox__table-cell"
              role="presentation"
            >
              Fruit
            </td>
          </tr>
          <tr
            class="react-combo-boxes-listbox__table-row"
            id="id_option_banana"
            role="option"
            tabindex="-1"
          >
            <td
              class="react-combo-boxes-listbox__table-cell"
              role="presentation"
            >
              Banana
            </td>
            <td
              class="react-combo-boxes-listbox__table-cell"
              role="presentation"
            >
              Fruit
            </td>
          </tr>
          <tr
            class="react-combo-boxes-listbox__table-row"
            id="id_option_potato"
            role="option"
            tabindex="-1"
          >
            <td
              class="react-combo-boxes-listbox__table-cell"
              role="presentation"
            >
              Potato
            </td>
            <td
              class="react-combo-boxes-listbox__table-cell"
              role="presentation"
            >
              Vegetable
            </td>
          </tr>
          <tr
            aria-disabled="true"
            class="react-combo-boxes-listbox__table-row"
            id="id_option_tomato"
            role="option"
            tabindex="-1"
          >
            <td
              class="react-combo-boxes-listbox__table-cell"
              role="presentation"
            >
              Tomato
            </td>
            <td
              class="react-combo-boxes-listbox__table-cell"
              role="presentation"
            >
              Vegetable
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_found_description"
    />
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    />
  </div>
</div>
`;

exports[`used with a combo box columns with headers renders a table with headers 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-describedby="id_found_description"
      aria-expanded="false"
      aria-labelledby="id-label"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      aria-hidden="true"
      class="react-combo-boxes-combobox__open-button"
      id="id_open_button"
    />
    <span
      aria-hidden="true"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
    />
    <div
      class="react-combo-boxes-listbox"
      hidden=""
    >
      <table
        aria-labelledby="id-label"
        class="react-combo-boxes-listbox__table"
        id="id_listbox"
        role="listbox"
        tabindex="-1"
      >
        <colgroup>
          <col />
          <col />
        </colgroup>
        <thead
          role="presentation"
        >
          <tr
            role="presentation"
          >
            <th
              aria-hidden="true"
              class="react-combo-boxes-listbox__table-header"
            >
              Name
            </th>
            <th
              aria-hidden="true"
              class="react-combo-boxes-listbox__table-header"
            >
              Type
            </th>
          </tr>
        </thead>
        <tbody
          role="presentation"
        >
          <tr
            class="react-combo-boxes-listbox__table-row"
            id="id_option_apple"
            role="option"
            tabindex="-1"
          >
            <td
              class="react-combo-boxes-listbox__table-cell"
              role="presentation"
            >
              <div
                class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
              >
                Name
              </div>
              Apple
            </td>
            <td
              class="react-combo-boxes-listbox__table-cell"
              role="presentation"
            >
              <div
                class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
              >
                Type
              </div>
              Fruit
            </td>
          </tr>
          <tr
            class="react-combo-boxes-listbox__table-row"
            id="id_option_banana"
            role="option"
            tabindex="-1"
          >
            <td
              class="react-combo-boxes-listbox__table-cell"
              role="presentation"
            >
              <div
                class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
              >
                Name
              </div>
              Banana
            </td>
            <td
              class="react-combo-boxes-listbox__table-cell"
              role="presentation"
            >
              <div
                class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
              >
                Type
              </div>
              Fruit
            </td>
          </tr>
          <tr
            class="react-combo-boxes-listbox__table-row"
            id="id_option_potato"
            role="option"
            tabindex="-1"
          >
            <td
              class="react-combo-boxes-listbox__table-cell"
              role="presentation"
            >
              <div
                class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
              >
                Name
              </div>
              Potato
            </td>
            <td
              class="react-combo-boxes-listbox__table-cell"
              role="presentation"
            >
              <div
                class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
              >
                Type
              </div>
              Vegetable
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_found_description"
    />
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    />
  </div>
</div>
`;

exports[`used with a combo box columns with html renders a table with colgroups 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-describedby="id_found_description"
      aria-expanded="false"
      aria-labelledby="id-label"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      aria-hidden="true"
      class="react-combo-boxes-combobox__open-button"
      id="id_open_button"
    />
    <span
      aria-hidden="true"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
    />
    <div
      class="react-combo-boxes-listbox"
      hidden=""
    >
      <table
        aria-labelledby="id-label"
        class="react-combo-boxes-listbox__table"
        id="id_listbox"
        role="listbox"
        tabindex="-1"
      >
        <colgroup>
          <col
            class="foo"
          />
          <col
            class="bar"
          />
        </colgroup>
        <tbody
          role="presentation"
        >
          <tr
            class="react-combo-boxes-listbox__table-row"
            id="id_option_apple"
            role="option"
            tabindex="-1"
          >
            <td
              class="react-combo-boxes-listbox__table-cell"
              role="presentation"
            >
              Apple
            </td>
            <td
              class="react-combo-boxes-listbox__table-cell"
              role="presentation"
            >
              Fruit
            </td>
          </tr>
          <tr
            class="react-combo-boxes-listbox__table-row"
            id="id_option_banana"
            role="option"
            tabindex="-1"
          >
            <td
              class="react-combo-boxes-listbox__table-cell"
              role="presentation"
            >
              Banana
            </td>
            <td
              class="react-combo-boxes-listbox__table-cell"
              role="presentation"
            >
              Fruit
            </td>
          </tr>
          <tr
            class="react-combo-boxes-listbox__table-row"
            id="id_option_potato"
            role="option"
            tabindex="-1"
          >
            <td
              class="react-combo-boxes-listbox__table-cell"
              role="presentation"
            >
              Potato
            </td>
            <td
              class="react-combo-boxes-listbox__table-cell"
              role="presentation"
            >
              Vegetable
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_found_description"
    />
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    />
  </div>
</div>
`;

exports[`used with a combo box grouped renders a table with groups 1`] = `
<div>
  <div
    aria-busy="false"
    class="react-combo-boxes-combobox"
  >
    <input
      aria-autocomplete="none"
      aria-controls="id_listbox"
      aria-describedby="id_found_description"
      aria-expanded="false"
      aria-labelledby="id-label"
      autocomplete="off"
      class="react-combo-boxes-combobox__input"
      id="id"
      role="combobox"
      type="text"
      value=""
    />
    <span
      aria-hidden="true"
      class="react-combo-boxes-combobox__open-button"
      id="id_open_button"
    />
    <span
      aria-hidden="true"
      class="react-combo-boxes-combobox__clear-button"
      hidden=""
      id="id_clear_button"
    />
    <div
      class="react-combo-boxes-listbox"
      hidden=""
    >
      <table
        aria-labelledby="id-label"
        class="react-combo-boxes-listbox__table"
        id="id_listbox"
        role="listbox"
        tabindex="-1"
      >
        <colgroup>
          <col />
          <col />
        </colgroup>
        <tbody
          role="presentation"
        >
          <tr
            class="react-combo-boxes-listbox__table-group-row"
          >
            <th
              aria-hidden="true"
              class="react-combo-boxes-listbox__table-group-header"
              colspan="2"
            >
              Fruit
            </th>
          </tr>
          <tr
            class="react-combo-boxes-listbox__table-row"
            id="id_option_apple"
            role="option"
            tabindex="-1"
          >
            <td
              class="react-combo-boxes-listbox__table-cell"
              role="presentation"
            >
              <div
                class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
              >
                Fruit
              </div>
              Apple
            </td>
            <td
              class="react-combo-boxes-listbox__table-cell"
              role="presentation"
            >
              Green
            </td>
          </tr>
          <tr
            class="react-combo-boxes-listbox__table-row"
            id="id_option_banana"
            role="option"
            tabindex="-1"
          >
            <td
              class="react-combo-boxes-listbox__table-cell"
              role="presentation"
            >
              <div
                class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
              >
                Fruit
              </div>
              Banana
            </td>
            <td
              class="react-combo-boxes-listbox__table-cell"
              role="presentation"
            >
              Yellow
            </td>
          </tr>
          <tr
            class="react-combo-boxes-listbox__table-group-row"
          >
            <th
              aria-hidden="true"
              class="react-combo-boxes-listbox__table-group-header"
              colspan="2"
            >
              Vegetable
            </th>
          </tr>
          <tr
            class="react-combo-boxes-listbox__table-row"
            id="id_option_potato"
            role="option"
            tabindex="-1"
          >
            <td
              class="react-combo-boxes-listbox__table-cell"
              role="presentation"
            >
              <div
                class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
              >
                Vegetable
              </div>
              Potato
            </td>
            <td
              class="react-combo-boxes-listbox__table-cell"
              role="presentation"
            >
              Brown
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_found_description"
    />
    <div
      class="react-combo-boxes-combobox__not-found"
      hidden=""
      id="id_not_found"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    />
  </div>
</div>
`;
